<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activity.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_70sdp"
                android:background="@drawable/login"></ImageView>

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_img"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/welcome_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/back_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_txt"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/back_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"></TextView>

            <RelativeLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/password_layout"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/strock_min_rount_cornar_new_tran">

                <EditText
                    android:id="@+id/user_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@color/transparent"
                    android:hint="@string/enter_username_txt"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp">

                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/loginbtn_layout"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/strock_min_rount_cornar_new_tran">

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@color/transparent"
                    android:hint="@string/enter_password_txt"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp">

                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginbtn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/fogot_password_txt"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/strock_min_rount_cornar_new"
                android:backgroundTint="@color/black">

                <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/login_txt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp">

                </TextView>
            </RelativeLayout>


            <TextView
                android:id="@+id/fogot_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/create_account_txt"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/forgot_password_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"></TextView>

            <TextView
                android:id="@+id/create_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_50sdp"
                android:text="@string/create_account_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"></TextView>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>